--- a/ui.css
+++ b/ui.css
@@ -102,18 +102,15 @@ svg {
   height: 12px;
 }
 
-.progressbar,
 .progressbar::-webkit-progress-bar {
   height: 12px;
-  margin-top: -1px;
-  margin-left: -1px;
   background-image: linear-gradient(rgb(244,244,244),
                                     rgb(233,233,233) 50%,
                                     rgb(206,206,206) 60%,
                                     rgb(206,206,206) 70%,
                                     rgb(233,233,233));
   border: 1px solid rgb(164,164,164);
-  border-radius: 6px;
+  border-radius: 2.5px;
   box-shadow: inset 0 0 0 1px rgba(255,255,255,0.2);
 }
 
@@ -128,7 +125,7 @@ svg {
                                     rgb(66,167,235) 70%,
                                     rgb(79,201,255));
   border: 1px solid rgb(59,150,210);
-  border-radius: 6px;
+  border-radius: 2.5px;
   
   box-shadow: inset 0 1px 0 0 rgba(255,255,255,0.5),
               inset 0 -1px 0 0 rgba(255,255,255,0.25);
@@ -229,7 +226,6 @@ a.button {
   
   line-height: 22px;
   text-decoration: none;
-  vertical-align: middle;
 }
 
 .toolbar .button {
